[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chirp-space"
version = "0.1.0"
description = "A one-person social home and personal site powered by Chirp"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "bengal-chirp[auth,forms,sessions]>=0.10.2,<0.11",
    "cryptography>=46,<47",
    "pillow>=12.3,<13",
    "psycopg[binary,pool]>=3.2",
]

[project.scripts]
chirp-space = "chirp_space.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chirp_space = ["py.typed", "templates/**/*.html", "static/**/*"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "-q", "--strict-markers"]
asyncio_mode = "auto"
markers = ["issue(number): behavioral acceptance coverage for a GitHub issue"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "S", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.ty.environment]
python-version = "3.14"
